--- a/gini_impurity_SHAP_plots.ipynb
+++ b/gini_impurity_SHAP_plots.ipynb
@@ -26,7 +26,7 @@
     "from sklearn.model_selection import StratifiedKFold\n",
     "from catboost import CatBoostClassifier as CBC\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "os.chdir(r'C:\\Users\\Bruger1\\Documents\\Data Science\\Kandidatspeciale\\Preprocessing\\Data Description')\n",
+    "os.chdir(r'DATA_DIR')\n",
     "df = pd.read_csv('train_df_final.csv')"
    ]
   },
